# rectv_gpu

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pars64  read_continuous.py  rec_simple.py  rectv  rectv.py  setup.py  tomopy_rec.py  tomopy_rectv.py
examples/foam/: foam_example.ipynb  foam_example.py
examples/tao/: rec_line.txt  tao.ipynb  tao.py
src/: kernels.cuh  kernels_radonusfft.cuh  main.cu  rectv.cu  rectv.cuh  rectv.i  rectv_wrap.cpp
src/cuda/: CMakeLists.txt  admm.cu  chambolle.cu  operators.cu  radonusfft.cu  rectv.cu  rectv.i
src/include/: kernels.cuh  kernels_operators.cuh  kernels_radonusfft.cuh  radonusfft.cuh  rectv.cuh
src/rectv_gpu/: __init__.py  rectv.py  solver.py
tests/: test_adjoint.py
tests/chip/: gen_deform_chip.py  prealign.py  rec.py  rec_real.py  rectest.py  rotate.py
tests/foam/: .gitignore  adjoint_tests.ipynb  adjoint_tests.py  foam_example.ipynb  read_continuous.py  rec.py  test_adjoint.py
tests/foam_paul/: cg.py  make_results.py  read_continuous.py  run.sh  test_center.py  tv.py
tests/foam_paul/149/: make_results.py  read_continuous.py  tv.py
